[package]
name = "dacien-cli"
version = "0.1.0"
edition = "2021"
description = "大慈恩寺学习资料 CLI - 查询广论、广海明月等系列讲次内容"

[[bin]]
name = "dacien-cli"
path = "src/main.rs"

[[bin]]
name = "build-data"
path = "src/build_data.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.1"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
