[package]
name = "date-remind"
version = "0.1.0"
edition = "2021"
description = "Date reminder CLI - calculates upcoming birthdays and anniversaries (lunar/solar)"

[dependencies]
chinese-lunisolar-calendar = "0.1.24"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
