[package]
name = "synology-api"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for Synology DSM Web API"

[[bin]]
name = "syno"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart", "stream"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
dotenvy = "0.15"
toml = "0.8"
tabled = "0.17"
base64 = "0.22"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
md-5 = "0.10"
pulldown-cmark = "0.12"
htmd = "0.5"
axum = "0.8"
tokio-stream = "0.1"
uuid = { version = "=1.12.1", features = ["v4"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
