[package]
name = "mythos-protocol-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zero-copy JSON protocol codec for OpenClaw WebSocket"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
simd-json = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
