[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "moltassist"
version = "0.1.0"
description = "Autonomous task execution for OpenClaw — F1 pit crew for your codebase"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AnnulusLabs LLC", email = "steve@annuluslabs.com"},
]
keywords = ["openclaw", "automation", "task-runner", "ai", "llm", "pit-crew"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/openclaw/openclaw"
Repository = "https://github.com/openclaw/openclaw/tree/main/extensions/moltassist"
Issues = "https://github.com/openclaw/openclaw/issues"

[project.scripts]
moltassist = "moltassist.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
