[package]
name = "openclaw"
version = "0.1.8"
description = "OpenClaw Beta desktop client"
authors = ["OpenClaw"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "openclaw-desktop"

[[bin]]
name = "openclaw-desktop"
path = "src/main.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
flate2 = "1.1"
tar = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
