[package]
name = "openclaw-desktop-linux"
version = "0.1.0"
description = "OpenClaw desktop companion for Linux"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "openclaw-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = "2.6.3"

[dependencies]
base64 = "0.22.1"
cairo-rs = { version = "0.18.5", features = ["png"] }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
libc = "0.2.186"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.5", features = ["image-png", "tray-icon"] }
webkit2gtk = "2.0.2"
