[package]
name = "openclaw-desktop"
version = "1.0.0"
edition = "2021"
description = "Official OpenClaw native Windows wrapper"
authors = ["OpenClaw Project"]

[dependencies]
tauri = { version = "1.5", features = ["system-tray", "devtools", "notification-all", "process-exit", "process-relaunch", "shell-sidecar", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
ureq = "2.9"
sysinfo = "0.30"
chrono = "0.4"
fern = "0.6"
log = "0.4"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
